# hearing-test-word-recognition

./: .gitignore  README.md  pyproject.toml
hearing_test/: main.py
hearing_test/resources/: top-1000-one-syllable-sorted-by-prevalence.txt
test/: main_test.py
