
[project]
name = ""
version = ""
description = ""
authors = [
    { name = "Thomas Arambula III", email = "thomasarambula96@gmail.com" },
]
dependencies = [
    "pytest>=7.3.2",
    "black>=23.3.0",
    "gTTS>=2.3.2",
    "playsound>=1.3.0",
    "pygame>=2.4.0",
]
requires-python = ">=3.11"
license = { text = "MIT" }
